--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-hook-form": "^7.25.3",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "react-router-dom": "^6.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
